<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ReservaEdit">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/edit_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Nombre del Cliente"
                android:inputType="textPersonName|textCapWords" />

            <EditText
                android:id="@+id/edit_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Teléfono de Contacto (9 dígitos)"
                android:inputType="number"
                android:maxLength="9" />

            <EditText
                android:id="@+id/edit_fecha_recogida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Fecha Recogida (DD-MM-YYYY)"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/edit_fecha_devolucion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="Fecha Devolución (DD-MM-YYYY)"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/edit_cascos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Número de Cascos (0 o más)"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar Quads:"
                android:textAppearance="?attr/textAppearanceListItem"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/quad_checkbox_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/textViewPrecioFrozen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItemSecondary"
                android:textSize="14sp"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guardar Reserva" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>