...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp" app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/recyclerview_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp" app:srcCompat="@drawable/ic_add_black_24dp"
        android:contentDescription="@string/add_quad" />

...
